# PortfolioRiskAgent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: settings.py
data/: current_holdings_from_screenshot.csv  sample_portfolio.csv
data/evaluation/: announcement_risk_cases.json  e2e_cases.json  guardrail_cases.json  tool_call_cases.json
docs/: day10_scheduler_recovery.md  day11_feishu_notification.md  day12_demo_frontend.md  day13_evaluation.md  day14_delivery.md  day3_day4_tools.md  day5_agent_runtime.md  day6_agents.md  day7_announcement_rag.md  day8_review_agent.md  day9_report_guardrail.md  official_benchmarks.md  realtime_market_data.md  resume_project.md  storage_design.md
log/: logging_config.py
scripts/: check_datastores.py  day10_scheduler_smoke.py  day11_feishu_notification_smoke.py  day14_demo.py  day2_smoke.py  day7_announcement_smoke.py  day8_review_smoke.py  day9_report_smoke.py  feishu_cli_status.py  init_chroma.py  init_mongo.js  init_redis.sh  mongo_repo_smoke.py  official_benchmark_status.py  redis_chroma_smoke.py  run_evaluation.py  start_dev.sh
src/: __main__.py
src/domain/: __init__.py  (+4 more)
tests/: test_day10_scheduler_executor.py  test_day11_feishu_notification.py  test_day12_demo_frontend.py  test_day13_evaluation.py  test_day1_day2_foundation.py  test_day3_day4_tools.py  test_day5_agent_runtime.py  test_day6_agents.py  test_day7_announcement_rag.py  test_day8_review_agent.py  test_day9_report_agent.py  test_mongo_repository.py  test_realtime_market_data.py  test_redis_chroma_runtime.py
(+85 files in other folders)
