[project]
name = "portfolio-risk-agent"
version = "0.1.0"
description = "DDD-style backend for a portfolio risk Agent resume project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "motor>=3.4.0",
  "pymongo>=4.7.0",
  "redis>=5.0.0",
  "chromadb>=0.5.0",
  "akshare>=1.15.0",
  "mcp>=1.0.0",
  "tavily-python>=0.5.0",
  "google-search-results>=2.4.2",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "datasets>=2.19.0",
  "huggingface-hub>=0.23.0",
  "bfcl-eval>=2025.8.6.2",
  "soundfile>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
